--- a/str2.html
+++ b/str2.html
@@ -16,7 +16,7 @@
      <nav class="navbar navbar-dark bg-primary">
         <span class="navbar-brand mb-0">Гостиница УлГТУ</span>
         <div class="col-sm-3 reservation">
-            <img src="../IntProg2/img/phone.png" > <bron>Бронирование номеров 8 123 456 78 90</bron>
+            <img src="lelbyy.github.io/IntProg/img/phone.png" > <bron>Бронирование номеров 8 123 456 78 90</bron>
         </div>
     </nav> 
 
