--- a/str2.html
+++ b/str2.html
@@ -28,7 +28,7 @@
           <ul class="navbar-nav mr-auto">
             <div class="col-sm-3">
                 <a class="nav-link" href="index.html">
-                    <img src="../IntProg2/img/hotel.png" >
+                    <img src="/IntProg/img/hotel.png" >
                 </a>
             </div>
             <li class="nav-item active">
