--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <nav class="navbar navbar-dark bg-primary">
         <span class="navbar-brand mb-0">Гостиница УлГТУ</span>
           <div class="col-sm-3 reservation">
-            <img src="IntProg/img/phone.png" > Бронирование номеров 8 123 456 78 90
+            <img src="https://github.com/lelbyy/IntProg/blob/master/img/phone.png" > Бронирование номеров 8 123 456 78 90
           </div>
       </nav> 
 
