--- a/str3.html
+++ b/str3.html
@@ -16,7 +16,7 @@
      <nav class="navbar navbar-dark bg-primary">
         <span class="navbar-brand mb-0">Гостиница УлГТУ</span>
         <div class="col-sm-3 reservation">
-            <img src="../IntProg2/img/phone.png" > <bron>Бронирование номеров 8 123 456 78 90</bron>
+            <img src="img/phone.png" > <bron>Бронирование номеров 8 123 456 78 90</bron>
         </div>
     </nav> 
 
@@ -28,7 +28,7 @@
           <ul class="navbar-nav mr-auto">
             <div class="col-sm-3">
                 <a class="nav-link" href="index.html">
-                    <img src="../IntProg2/img/hotel.png" >
+                    <img src="img/hotel.png" >
                 </a>
             </div>
             <li class="nav-item active">
