--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </ul>
         </div>
       </nav>
-  <div class ="body2">
+  <div class ="body">
   
   <div class = "buttons">    
     <a href="str2.html"><button type="button" class="btn btn-primary btn-lg">Вход</button></a>
