--- a/str3.html
+++ b/str3.html
@@ -10,17 +10,6 @@
 			<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <title>Регистрация</title>
 
-    <style>
-      body {
-        background: url("img/image2.png") no-repeat;
-     
-       -moz-background-size: 100%; 
-       -webkit-background-size: 100%; 
-       -o-background-size: 100%; 
-       background-size: 1910px, 1000px; 
-      }
-     </style>
-
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
         m[i] =
@@ -63,7 +52,7 @@
      <nav class="navbar navbar-dark bg-primary">
         <span class="navbar-brand mb-0">Гостиница УлГТУ</span>
         <div class="col-sm-3 reservation">
-            <img src="../IntProg2/img/phone.png" > <bron>Бронирование номеров 8 123 456 78 90</bron>
+            <img src="img/phone.png" > <bron>Бронирование номеров 8 123 456 78 90</bron>
         </div>
     </nav> 
 
@@ -75,7 +64,7 @@
           <ul class="navbar-nav mr-auto">
             <div class="col-sm-3">
                 <a class="nav-link" href="index.html">
-                    <img src="../IntProg2/img/hotel.png" >
+                    <img src="img/hotel.png" >
                 </a>
             </div>
             <li class="nav-item active">
@@ -100,7 +89,7 @@
         </div>
       </nav>
 
-      <div class ="body">
+      <div class ="body3">
 
      <h6>Регистрация</h6>
 
