--- a/index.html
+++ b/index.html
@@ -3,17 +3,6 @@
 <head>
     <title>Main</title>
 
-    <style>
-      body {
-        background: url("img/image1.png") no-repeat;
-     
-       -moz-background-size: 100%; 
-       -webkit-background-size: 100%; 
-       -o-background-size: 100%; 
-       background-size: 1910px, 1000px; 
-      }
-     </style>
-
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
         m[i] =
@@ -109,7 +98,7 @@
           </ul>
         </div>
       </nav>
-  <div class ="body">
+  <div class ="body2">
   
   <div class = "buttons">    
     <a href="str2.html"><button type="button" class="btn btn-primary btn-lg">Вход</button></a>
