--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>           
     </div>
 
-  <div class = "nomera">
+  <div class = "rooms">
       <div class="row ">
         
       <div class=" card">
