--- a/str3.html
+++ b/str3.html
@@ -92,27 +92,25 @@
       <div class ="body3">
 
      <h6>Регистрация</h6>
-
+<container>
     <form id="sign-up-form">
-      <div class="form-group">
+      <div class="login-input">
         <label for="exampleInputName1"><h5>Имя</h5></label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" name="exampleInputName1" placeholder="Введите имя">
-      </div>
-      <div class="form-group">
+        <input type="text" class="form-control mr-sm-2 input-field" id="exampleFormControlInput1" name="exampleInputName1" placeholder="Введите имя">
+
         <label for="exampleInputPassword1"><h5>Пароль</h5></label>     
-        <input type="password" class="form-control" id="exampleFormControlInput1" name="exampleInputPassword1" placeholder="Введите пароль">
-      </div>
-      <div class="form-group">
+        <input type="password" class="form-control mr-sm-2 input-field" id="exampleFormControlInput1" name="exampleInputPassword1" placeholder="Введите пароль">
+
         <label for="exampleInputPassword2"><h5>Повторите пароль</h5></label>     
-        <input type="password" class="form-control" id="exampleFormControlInput1" name="exampleInputPassword2" placeholder="Введите пароль">
-      </div> 
-      <div class="form-group">
+        <input type="password" class="form-control mr-sm-2 input-field" id="exampleFormControlInput1" name="exampleInputPassword2" placeholder="Введите пароль">
+
         <label for="exampleInputEmail1"><h5>Введите почту</h5></label>     
-        <input type="email" class="form-control" id="exampleFormControlInput1" name="exampleInputEmail1" placeholder="Пример: alexalex@mail.ru">
+        <input type="email" class="form-control mr-sm-2 input-field" id="exampleFormControlInput1" name="exampleInputEmail1" placeholder="Пример: alexalex@mail.ru">
+        <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
       </div>
 
      
-      <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+
     </form>
   </div>
 </div>
